--- a/metricas/templates/metricas/index.html
+++ b/metricas/templates/metricas/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!-- Opcional: Librería para gráficos en frontend si decides hacerlo en JS -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> -->
     <style>
