eliminacion del boton de generarCuadroTendencia()

--- a/metricas/templates/metricas/index.html
+++ b/metricas/templates/metricas/index.html
@@ -526,13 +526,9 @@
                     <div class="form-text">Seleccione técnicos o use los botones de acción</div>
                 </div>
 
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <button class="btn btn-primary" onclick="generarReporte()">
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary btn-block" onclick="generarReporte()">
                         <i class="bi bi-file-earmark-bar-graph me-2"></i>Generar Reporte
-                    </button>
-                    <!-- Nuevo botón para generar cuadro de tendencia -->
-                    <button class="btn btn-info" onclick="generarCuadroTendencia()">
-                        <i class="bi bi-table me-2"></i>Generar Cuadro de Tendencia SLA
                     </button>
                 </div>
             </div>
