--- a/metricas/templates/metricas/login.html
+++ b/metricas/templates/metricas/login.html
@@ -151,7 +151,7 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <button type="submit" class="btn-login" id="login-button">
-                <span class="spinner-border d-none" role="status"></span>
+                <i class="fas fa-spinner fa-pulse" role="status"></i>
                 <span class="button-text">Iniciar Sesión</span>
             </button>
 
