comentar la opcion de dia en cuadre de tendencia

--- a/metricas/templates/metricas/index.html
+++ b/metricas/templates/metricas/index.html
@@ -47,6 +47,9 @@
             border-bottom: none;
             padding: 1.25rem;
         }
+        .card mt-4 {
+            background-color: #E9C46A;
+        }
 
         .btn-primary {
             background-color: var(--color-primary);
@@ -210,6 +213,7 @@
 
         .result-card {
             margin-top: 2rem;
+            
         }
 
         .ticket-link {
@@ -594,12 +598,12 @@
                 <h5 class="mb-0">Tendencia SLA</h5>
             </div>
             <div class="card-body">
-                <div class="row mb-3">
+                <div class="row mb-3" >
                     <div class="col-md-6">
-                        <label for="agrupacion" class="form-label">Agrupación:</label>
-                        <select id="agrupacion" class="form-select">
-                            <option value="mes">Por Mes</option>
-                            <option value="dia">Por Día</option>
+                        <label for="agrupacion"  class="form-label">Agrupación:</label>
+                        <select id="agrupacion"  class="form-select">
+                            <option  value="mes">Por Mes</option>
+                            <!--<option value="dia">Por Día</option>-->
                         </select>
                     </div>
                 </div>
